Convert: application properties to yaml. Update: openapi , controller, flyway script, and entities. Add: upload method for Electricity.
